--- a/queries.css
+++ b/queries.css
@@ -1,8 +1,12 @@
+/* .........
+      For mobile devices
+      ................. */
+
 @media screen and (max-width:575px) {
+
+    /* header Queries */
     .header_main {
-        /* grid-template-columns: repeat(1, 1fr); */
         display: block;
-        border: 1px solid red;
         width: 100%;
     }
 
@@ -11,15 +15,11 @@
     }
 
     .header_title {
-        font-weight: bold;
         font-size: 37px;
-        color: #FFFFFF;
-        padding-bottom: 15px;
     }
 
     .right_header img {
         width: 100%;
-
         height: unset;
         margin-left: 0;
         margin-top: 0;
@@ -29,23 +29,20 @@
         width: 100%;
     }
 
+
+    /* player/main area queries */
     .players {
         display: block;
     }
 
     .player {
-        /* border: 2px solid red; */
         height: unset;
         width: 100%;
         margin: 0;
         margin-bottom: 30px;
-        background: #FFFFFF;
-        box-shadow: 0px 0px 40px rgb(0 0 0 / 25%);
-        border-radius: 5px;
     }
 
     .player_profile {
-        /* border: 2px solid rgb(115, 8, 238); */
         height: unset;
         width: 100%;
         padding: 5px;
@@ -54,7 +51,6 @@
     .player_profile img {
         height: unset;
         width: 93%;
-        /* margin: 8px; */
         padding-left: 2px;
     }
 
@@ -65,12 +61,10 @@
         grid-template-columns: repeat(1, 1fr);
     }
 
+
+    /* container-bonus area queries */
     .container_left {
         width: 100%;
-        background-color: rgb(27, 27, 133);
-        opacity: 0.9;
-        color: white;
-        border-radius: 10px;
         margin-left: unset;
         margin-bottom: 15px;
     }
@@ -83,6 +77,8 @@
         grid-gap: 5px;
     }
 
+
+    /* footer area queries */
     .logo img {
         width: 74%;
         height: unset;
