--- a/style.css
+++ b/style.css
@@ -5,13 +5,13 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: 'Poppins',
+        sans-serif;
 }
 
-body {
-    font-family: 'Poppins', sans-serif;
-}
-
-/* Header style */
+/* ....
+   Header style
+   ..... */
 
 .header_main {
     background-color: rgb(27, 27, 133);
@@ -25,6 +25,7 @@ body {
     transition-duration: 2s;
 }
 
+/* transition in header  */
 .header_main:hover {
     background-color: blueviolet;
 }
@@ -42,22 +43,23 @@ body {
     padding-bottom: 15px;
 }
 
+/* watch-live button style  */
 .watch_live {
     text-decoration: none;
-    background-color: #E02C6D;
+    background-color: rgb(255, 0, 68);
     color: #FFFFFF;
     padding: 10px 24px;
     margin-top: 5px;
     border-radius: 3px;
-    transition-property: color;
-    transition-duration: 2s;
-
+    box-shadow: inset 0 0 0 0 #f9e506;
+    transition: ease-out 0.5s;
+    outline: none;
 }
 
+/* transition in button  */
 .watch_live:hover {
-    background-color: #00fff0;
+    box-shadow: inset 100px 0 0 0 #f9e506;
     color: black;
-
 }
 
 .watch_live .fas {
@@ -69,6 +71,7 @@ body {
     width: 760px;
 }
 
+/* header image style  */
 .right_header img {
     width: 556px;
     height: 460px;
@@ -77,8 +80,12 @@ body {
 
 }
 
-/* Main style  */
+/* .....
+    Main section style
+    ........  */
+
 .players {
+
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-row-gap: 1px;
@@ -86,8 +93,8 @@ body {
     margin: 30px;
 }
 
+/* individual player style  */
 .player {
-    /* border: 2px solid red; */
     height: 420px;
     width: 330px;
     margin: 50px;
@@ -97,7 +104,6 @@ body {
 }
 
 .player_profile {
-    /* border: 2px solid rgb(115, 8, 238); */
     height: 400px;
     width: 300px;
     padding: 5px;
@@ -127,14 +133,17 @@ body {
     font-weight: normal;
 }
 
-/* extra container style  */
+/* ......
+    extra/bonus container style
+    .......  */
+
 .container {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
 }
 
 
-/* form style */
+/* feedback form style */
 
 .container_left {
     width: 360px;
@@ -229,7 +238,7 @@ form button:hover {
     transition: all 1s ease;
 }
 
-/* calender style  */
+/* our calender style  */
 .calender_detail {
     width: 560px;
     background-color: rgb(27, 27, 133);
@@ -274,8 +283,12 @@ form button:hover {
     font-size: 2em;
 }
 
-/* footer style  */
+/* ....
+    footer area style
+    .......  */
 
+
+/* footer logo style  */
 .logo {
     text-align: center;
 }
@@ -287,6 +300,7 @@ form button:hover {
     margin-bottom: 30px;
 }
 
+/* social icon style  */
 .icons {
     text-align: center;
 }
@@ -296,6 +310,8 @@ form button:hover {
     width: 50px;
 }
 
+
+/* copyright area style  */
 .copyright {
     text-align: center;
 }
